# VTIL-Samples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Brainfuck/: CMakeLists.txt  lifter.cpp  lifter.hpp  main.cpp  vm.cpp  vm.hpp
Brainfuck/lifted/: fibonacci.vtil  game_of_life.vtil  hello_world.vtil  hello_world_optimized.vtil  test.vtil
Brainfuck/programs/: fibonacci.bf  game_of_life.bf  hello_world.bf  test.bf
Hello World/: CMakeLists.txt  main.cpp
Intro/: CMakeLists.txt  main.cpp
Logger/: CMakeLists.txt  main.cpp
Simplification/: CMakeLists.txt  main.cpp
